# expothesis

./: .gitignore  AGENT.md  FEATURES.md  Makefile  README.md  docker-compose.override.yml  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/migrations/: 001_create_auth.sql  002_create_sdk_tokens.sql  003_create_organizations.sql  004_add_org_to_core.sql  005_add_org_to_experiments.sql  006_move_tables_to_postgres.sql  007_sync_experiments_schema.sql  008_create_invites.sql  009_rename_orgs_to_accounts.sql
backend/src/: config.rs  main.rs
backend/src/api/: accounts.rs  ai.rs  analytics.rs  auth.rs  events.rs  experiments.rs  feature_flags.rs  feature_gates.rs  invites.rs  mod.rs  organizations.rs  sdk.rs  track.rs  user_groups.rs
backend/src/db/: clickhouse.rs  mod.rs  postgres.rs
backend/src/middleware/: auth.rs
backend/src/models/: mod.rs
backend/src/models/analytics/: dto.rs  mod.rs  structs.rs
backend/src/models/auth/: dto.rs  structs.rs
backend/src/models/events/: db_rows.rs  dto.rs  mod.rs  structs.rs
backend/src/models/experiments/: db_rows.rs  dto.rs  enums.rs  mod.rs  structs.rs
backend/src/models/feature_flags/: db_rows.rs  dto.rs  enums.rs  mod.rs  structs.rs
backend/src/models/feature_gates/: db_rows.rs  dto.rs  enums.rs  structs.rs
backend/src/models/sessions/: db_rows.rs  dto.rs  structs.rs
backend/src/models/statistics/: cuped.rs  mod.rs  structs.rs
backend/src/models/user_groups/: db_rows.rs  dto.rs  structs.rs
backend/src/services/: analytics_service.rs  auth_service.rs  cuped_service.rs  event_service.rs  experiment_service.rs  feature_flag_service.rs  feature_gate_service.rs  invite_service.rs  mod.rs  sdk_token_service.rs  targeting.rs  tracking_service.rs  user_group_service.rs
backend/src/stats/: analysis.rs  cuped.rs  mod.rs
backend/src/utils/: authed.rs  mod.rs
frontend/: Dockerfile  FLOW_STUDIO_README.md  SIMULATION_README.md  index.html  package-lock.json  package.json  (+3 more)
(+107 files in other folders)
