[package]
name = "expothesis-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.5"
actix-cors = "0.7"

# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
clickhouse = { version = "0.11", features = ["watch"] }

# Statistical analysis
statrs = "0.16"

# UUID generation
uuid = { version = "1.7", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Environment variables
dotenv = "0.15"

# Logging
env_logger = "0.11"
log = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"
regex = "1.12.3"

[dev-dependencies]
mockito = "1.2"
