[package]
name = "expothesis-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.5"
actix-cors = "0.7"

# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
clickhouse = { version = "0.11", features = ["watch"] }

# Statistical analysis
statrs = "0.16"

# UUID generation
uuid = { version = "1.7", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Environment variables
dotenv = "0.15"

# Logging
env_logger = "0.11"
log = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"
regex = "1.12.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
futures-util = "0.3"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
argon2 = "0.5"
jsonwebtoken = "9.3"
rand = "0.8"
data-encoding = "2.6"
totp-rs = "5"
lettre = { version = "0.11", features = ["smtp-transport", "builder", "tokio1", "tokio1-native-tls"] }

[dev-dependencies]
mockito = "1.2"
